<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="btn_link">Daftar</string>

    <string name="detail_begintime">Your text here</string>
    <string name="detail_description">Your text here</string>
    <string name="detail_name">Your text here</string>
    <string name="detail_quota">Your text here</string>

    <string name="judul_event">Your text here</string>
    <string name="quota_left">%d slot tersisa</string>
    <string name="searchbar_hint">Cari Event</string>

    <string name="title_active_event">Active Events</string>
    <string name="title_begintime">Waktu acara :</string>
    <string name="title_description">Deskripsi acara :</string>
    <string name="title_finished">Finished Events</string>
    <string name="title_Finished_event">Finished Events</string>
    <string name="title_home">Home</string>
    <string name="title_image">Gambar</string>
    <string name="title_name">Nama acara :</string>
    <string name="title_ownername">Penyelenggara acara :</string>
    <string name="title_quota">Sisa kuota pendaftar :</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="event_tidak_ditemukan">Event Tidak Ditemukan</string>

    <string name="no_favorit">Belum ada event favorit</string>
    <string name="title_favorite">Favorite</string>

    <string name="favorite_button">Favorite button</string>
    <string name="add_to_favorite">Added to favorites</string>
    <string name="remove_from_favorite">Removed from favorites</string>
    <string name="title_settings">Settings</string>
    <string name="dark_light_mode">Dark / Light Mode</string>
    <string name="ic_setting">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="daily_event_reminder">Daily Event Reminder</string>
    <string name="receive_daily_notif">Dapatkan notifikasi harian untuk event yang akan datang</string>
</resources>
