<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Fragment untuk halaman Home -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.aplikasidicodingevent.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Fragment untuk halaman Upcoming Events -->
    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.aplikasidicodingevent.ui.fragment.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <!-- Fragment untuk halaman Finished Events -->
    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.aplikasidicodingevent.ui.fragment.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.aplikasidicodingevent.ui.fragment.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favorite_to_detail"
            app:destination="@id/detailActivity">
            <argument
                android:name="event"
                app:argType="com.dicoding.aplikasidicodingevent.data.ListEventsItem" />
        </action>
    </fragment>

    <activity
        android:id="@+id/detailActivity"
        android:name="com.dicoding.aplikasidicodingevent.ui.activity.DetailActivity"
        android:label="Detail Event">
        <argument
            android:name="event"
            app:argType="com.dicoding.aplikasidicodingevent.data.ListEventsItem" />
    </activity>

</navigation>