<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragment.SettingFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/dark_light_mode"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/daily_event_reminder"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/receive_daily_notif"
        android:textSize="14sp"
        android:textColor="?android:textColorSecondary"/>

</LinearLayout>